--- a/.github/workflows/testRun.yml
+++ b/.github/workflows/testRun.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         node-version: [16.x]
